--- a/styling3.css
+++ b/styling3.css
@@ -26,6 +26,7 @@ nav ul{
     background: rgb(170, 170, 170);
     color: rgb(0, 0, 0);
     padding: 10px;
-    margin-bottom: 2rem;
 }
-
+body{
+    background-color: antiquewhite;
+}
