--- a/styling2.css
+++ b/styling2.css
@@ -1,3 +1,5 @@
+
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -26,8 +28,7 @@
   transition: background 0.21s, color 0.2s, box-shadow 0.2s;
 }
 
-.navbar-links li a:hover,
-.navbar-links li a:focus {
+.navbar-links li a:hover {
   background: rgba(255,255,255,0.16);
   color: #ffe066;
   box-shadow: 0 2px 12px 0 rgba(62,180,137,0.09);
@@ -38,14 +39,18 @@
   margin-top: 3rem;
   margin-left: 2rem;
   font-family: garamond;
-  width: 47%;
+  width: 40%;
+  height: 90%;
+  padding: 1rem;
 }
 .list2{
   float: right;
   margin-top: 3rem;
   margin-right: 2rem;
   font-family: garamond;
-  width: 47%
+  width: 40%;
+  height: 90%;
+  padding: 1rem;
 }
 .list1:hover{
   background-color: #F7F1DE;
@@ -53,3 +58,15 @@
 .list2:hover{
   background-color: #F7F1DE;
 }
+footer {
+  background: #444;
+  color: #fff;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 100%;
+  clear: both;
+  position: relative;
+  margin-top: 10rem;
+}
+
